# lowendinsight-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml  scorecards-analysis.yml
src/: analyze.rs  cli.rs  config.rs  main.rs
tests/: cli.rs  lei.content.toml  lei.toml
