[package]
name = "lei"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "LowEndInsight CLI"
repository = "https://github.com/quency-ai/lowendinsight-cli"
readme = "README.md"
homepage = "https://www.lowendinsight.dev"
authors = ["kit@quency.ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
assert_cmd = "2.0.7"
openssl-sys = { version = "0.9", features = ["vendored"] }
run_script = { version = "0.10" }
url = "2.2"
anyhow = "1.0.68"
structopt = "0.3.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = "0.10.0"
toml = "0.7.1"
home = "0.5.3"
predicates = "2.1"
